# xoid-mouseemu

./: .gitignore  CMakeLists.txt
src/: Makefile  config.h  daemon.c  daemon.h  help.c  help.h  log.c  log.h  main.c  mouse.c  mouse.h  socket.c  socket.h  utils.c  utils.h  virtual.c  virtual.h
